src/test/ui/generator/issue-88653.stderr
error[E0631]: type mismatch in generator arguments
  --> $DIR/issue-88653.rs:9:5
   |
LL |     |bar| {
   |     ^^^^^
   |     |
   |     expected signature of `fn((bool,)) -> _`
   |     found signature of `fn(bool) -> _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
